[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/popups/DifficultySelectionPopup.gd" type="Script" id=1]
[ext_resource path="res://ui/themes/H3_Theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/themes/H1_Theme.tres" type="Theme" id=3]

[node name="DifficultySelectionPopup" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.187
anchor_top = 0.12
anchor_right = 0.812
anchor_bottom = 0.92
margin_left = 0.511993
margin_top = -8.0
margin_right = 0.511963
color = Color( 0.945098, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.312
anchor_top = 0.16
anchor_right = 0.687
anchor_bottom = 0.813
margin_left = 0.511993
margin_top = -7.62939e-06
margin_right = 0.511963
margin_bottom = 0.199982
theme = ExtResource( 2 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
theme = ExtResource( 3 )
text = "Select difficulty"
align = 1

[node name="EasyBtn" type="Button" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 384.0
margin_bottom = 142.0
text = "Easy"

[node name="MediumBtn" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 384.0
margin_bottom = 194.0
text = "Medium"

[node name="HardBtn" type="Button" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 384.0
margin_bottom = 246.0
text = "Hard"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 384.0
margin_bottom = 298.0
text = "Back"

[connection signal="popup_hide" from="." to="." method="_on_DifficultySelectionPopup_popup_hide"]
[connection signal="button_down" from="VBoxContainer/EasyBtn" to="." method="_on_EasyBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/MediumBtn" to="." method="_on_MediumBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/HardBtn" to="." method="_on_HardBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_button_down"]
